Bug 735641 - No way to deselect image of image document after select all (Ctrl+A).  r=bz